[gd_scene load_steps=4 format=2]

[ext_resource path="res://Marker.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/circle.png" type="Texture" id=2]
[ext_resource path="res://Theme.tres" type="Theme" id=3]

[node name="Marker" type="Spatial"]
script = ExtResource( 1 )

[node name="Marker2D" type="HBoxContainer" parent="."]
margin_right = 61.0
margin_bottom = 18.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Marker2D"]
modulate = Color( 0.129412, 0.2, 0.513726, 1 )
margin_right = 16.0
margin_bottom = 23.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="Marker2D"]
margin_left = 20.0
margin_right = 56.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Marker2D/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 34.0
margin_bottom = 21.0
size_flags_vertical = 5
text = "Test"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Marker2D" to="." method="_on_Marker2D_gui_input"]
[connection signal="mouse_entered" from="Marker2D" to="." method="_on_Marker2D_mouse_entered"]
[connection signal="mouse_exited" from="Marker2D" to="." method="_on_Marker2D_mouse_exited"]
